--- a/Basis/templates/Basis/coffee.html
+++ b/Basis/templates/Basis/coffee.html
@@ -7,9 +7,9 @@
         <div id="toolbar"></div>
         <form id="changelist-form">
             <div class="results">
-                <h1>et voilà</h1>
-                <div class="index-image">
-                    <p style="text-align: center;"><img src="{% static "project/img/coffee.gif" %}" style="width: 500px;"></p>
+                <div class="coffee-image">
+                    <h1>et voilà</h1>
+                    <p style="text-align: center;"><img src="{% static "project/img/coffee.gif" %}" style="width: 500px; "></p>
                     <p style="text-align: center;">Wem das nicht genug ist: <a href="https://giphy.com/gifs/heart-coffee-Vn6GVhNCYplba/fullscreen" target="_blank">Giphy Fullscreen</a></p>
                 </div>
             </div>
