--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -300,6 +300,13 @@ body.change-list .object-tools .addlink {
 .submit-row p.deletelink-box {
     float: right;
 }
+.coffee-image {
+	animation: fadein 5s;
+}
+@keyframes fadein {
+	from { opacity: 0}
+	to   { opacity: 1}
+}
 	
 
 @media only screen 
