--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -313,6 +313,10 @@ body.change-list .object-tools .addlink {
 	from { opacity: 0}
 	to   { opacity: 1}
 }
+.errornote {
+	margin: 0 20px 0.71429rem 20px;
+	border-radius: 4px;
+}
 	
 
 @media only screen 
