--- a/Basis/templates/Basis/base.html
+++ b/Basis/templates/Basis/base.html
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="{% static "admin/js/urlify.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/prepopulate.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/vendor/xregexp/xregexp.js" %}"></script>
-        <script type="text/javascript" src="{% static "project/js/onchange.js" %}"></script>
+        <!--script type="text/javascript" src="{% static "project/js/onchange.js" %}"></script-->
     </head>
     <body class="menu-pinned change-list {% if popup %}popup{% endif %}">
         <!-- Container -->
