add filter to DeleteViews

--- a/Basis/templates/Basis/404.html
+++ b/Basis/templates/Basis/404.html
@@ -3,7 +3,7 @@
         <meta http-equiv="refresh" content="8;url=/" />
     </head>
     <body>
-        <h1 style="padding-top:10rem;font-size: 30px;text-align: center;font-weight:bold;">Die Seite wurde nicht gefunden</h1>
+        <h1 style="padding-top:10rem;font-size: 30px;text-align: center;font-weight:bold;">Der gesuchte Eintrag wurde nicht gefunden, oder Sie haben nicht die nötige Berechtigung.</h1>
         <p style="text-align: center;">Sie werden innerhalb von 10 sek zur Homepage weitergeleitet. Ansonsten benutzen sie bitte diesen <a href="/">Link</a></p>
     </body>
 </html>
