--- a/Basis/templates/Basis/confirm_delete.html
+++ b/Basis/templates/Basis/confirm_delete.html
@@ -23,11 +23,8 @@
         {% endif %}
         <div class="submit-row">
             <a href="javascript:history.go(-1)" class="closelink">{{ back_button|upper|default:'Abbrechen' }}</a>
-            <input type="submit" value="{{ submit_button|default:'Bestätigen' }}" class="default" name="_save">
-            {% if delete_button %}
-                <p class="deletelink-box">
-                    <a href="delete/{{ url_args }}" class="deletelink">{{ delete_button|default:'Löschen' }}</a>
-                </p>
+            {% if submit_button %}
+            <input type="submit" value="{{ submit_button }}" class="default" name="_save">
             {% endif %}
         </div>
     </form>
