change permission for koordinator copy; fix index screen for mobile device

--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -26,7 +26,9 @@
                     {% endif %}
                 </div>
                 <div class="index-image">
-                    <p style="text-align: center; padding-left: 100px;"><img src="{% static "project/img/Projektgruppen.jpg" %}" style="width: 630px;"></p>
+                    <p style="text-align: center; padding-left: 100px;">
+                        <img src="{% static "project/img/Projektgruppen.jpg" %}" style="width: 630px;max-width: 90%;">
+                    </p>
                 </div>
             </div>
         </form>
