--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="index-image">
                     <p style="text-align: center; padding-left: 100px;">
-                        <img src="{% static "project/img/Projektgruppen.jpg" %}" style="width: 630px;max-width: 90%;">
+                        <img src="{% static "project/img/" %}{% settings_value "COMMUNITY_SUBDIR" %}/basis.jpg" style="width: 630px;max-width: 90%;">
                     </p>
                 </div>
             </div>
