fix mobile style

--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -26,8 +26,8 @@
                     {% endif %}
                 </div>
                 <div class="index-image">
-                    <p style="text-align: center; padding-left: 100px;">
-                        <img src="{% static "project/img/" %}{% settings_value "COMMUNITY_SUBDIR" %}/basis.jpg" style="width: 630px;max-width: 90%;">
+                    <p style="text-align: center;">
+                        <img src="{% static "project/img/" %}{% settings_value "COMMUNITY_SUBDIR" %}/basis.jpg">
                     </p>
                 </div>
             </div>
